:bug: Affichage correct des liens dans les champs de type Editeur de texte

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+### 11.302.1
+CORRECTIFS
+- Rendu correct des liens dans les champs de type Editeur de texte
+### 11.302.0
+FONCTIONNALITES
+- Système compatible avec Foundry v11 tout en restant compatible V10
+
 ### 10.291.1
 FONCTIONNALITES
 - Système compatible avec Foundry v10
