Mise à jour de la gestion des Profils, Voies et Capacités, iso COF

--- a/lang/en.json
+++ b/lang/en.json
@@ -400,12 +400,40 @@
   "COC.notification.WeaponIndexMissing" : "This encounter does not posses a weapon number",
   "COC.notification.NotEnoughFreeHands" : "Not enough free hands to equip this object",
   "COC.notification.ArmorSlotNotAvailable" : "This armor slot is not available",
-  "COC.notification.ItemNotEquipable" : "{itemName} is not an equipable object",    
+  "COC.notification.ItemNotEquipable" : "{itemName} is not an equipable object",
+  "COC.notification.CapacityAlreadyOnItem" : "This item already contains this capacity.",
+  "COC.notification.HitPointsNoTarget" : "You must select at least one target to apply the damages.",
+  "COC.notification.PathAlreadyOwned" : "You already have this path.",
+  "COC.notification.PathAlreadyOnItem" : "This item has already this path.",
+  "COC.notification.ConsumeEmptyObject" : "You can no longer use this item !",
+  "COC.notification.ActivateEmptyCapacity" : "You can no longer use this capacity !",
+  "COC.notification.ProfileAlreadyOwned" : "You already havea profile.",
+  "COC.notification.ItemNotFound" : "Unable to find the item",
+  "COC.notification.incompetentWithWeapon": "{name} is unskilled with the weapon {item}",
+  "COC.notification.incompetentWithArmor": "{name} is unskilled with the armor {item}",
+  "COC.notification.chatHook.noSkillSelected": "You must define the characteristic to test, by exemple /skill str.", 
+  "COC.notification.ItemNotInInventory" : "Item '{itemName}' is not in {actorName}'s Inventory",    
 
+  "COC.dialog.deletePath.title": "Delete the path ?",
+  "COC.dialog.deletePath.confirm": "<p>Are you sure you want to delete the specie of {name} ?</p>",
+  "COC.dialog.deletePath.confirmSeveralPaths" : "{nb} paths have been deleted.",
+  "COC.dialog.deletePath.confirmOnePath" : "1 path has been deleted.",    
+  "COC.dialog.deleteProfile.title": "Delete the profile ?",
+  "COC.dialog.deleteProfile.confirm" : "<p>Are you sure you want to delete the profile of {name} ?</p>",
+  "COC.dialog.deleteProfile.confirmDelete" : "The profile has been deleted.",  
+  "COC.dialog.deleteSpecie.title": "Delete the specie ?",
+  "COC.dialog.deleteSpecie.confirm": "<p>Are you sure you want to delete the specie of {name} ?</p>", 
+  "COC.dialog.deleteSpecie.confirmDelete" : "The specie has been deleted.",
+  "COC.dialog.deleteSpecie.confirmSeveralCapacities" : "{nb} capacities have been deleted.",
+  "COC.dialog.deleteSpecie.confirmOneCapacity" : "1 capacity has been deleted.",    
   "COC.dialog.rollWeapon.title": "Weapon Roll",
   "COC.dialog.rollDamage.title": "Damage Roll",
   "COC.dialog.rollHitPoints.title": "Hit Points Roll",
+  "COC.dialog.rollHitPoints.error": "You must select a profile or choose a Hit dice",
   "COC.dialog.spendRecoveryPoint.title": "Spend one Recovery Point",
+  "COC.dialog.spendRecoveryPoint.content": "<p>Are you sure you want to spend 1 recovery point ?",
+  "COC.dialog.spendRecoveryPoint.rollTitle": "Recovery Point",  
+  "COC.dialog.chooseCharacteristics.title": "Characteristic scores",
     
   "SETTINGS.useRecovery.name": "Recovery Points",
   "SETTINGS.useRecovery.hint": "Use the Recovery Points (RP) optional rule.",
