--- a/lang/fr.json
+++ b/lang/fr.json
@@ -141,11 +141,6 @@
   "COC.ui.sendItemToChat" : "Afficher l'objet dans le chat",
   "COC.ui.editItem" : "Editer l'objet",
   "COC.ui.deleteItem" : "Supprimer l'objet",
-
-  "COC.notification.noCapacitySelected" : "Aucune capacité n'a été ajoutée pour le moment",
-  "COC.notification.noPathSelected": "Aucune voie n'a été ajoutée pour le moment",
-  "COC.notification.noEncounterWeaponsSelected": "Aucune arme de rencontre n'a été ajoutée pour le moment",
-  "COC.notification.emptyInventory": "L'inventaire est vide",
   
   "COC.placeholders.stacksize" : "Quantité infinie si vide",
 
@@ -390,6 +385,11 @@
   "COC.setting.surhumains" : "Surhumains",
   "COC.setting.cyberpunk" : "Cyberpunk",
 
+  "COC.notification.noCapacitySelected" : "Aucune capacité n'a été ajoutée pour le moment",
+  "COC.notification.noPathSelected": "Aucune voie n'a été ajoutée pour le moment",
+  "COC.notification.noEncounterWeaponsSelected": "Aucune arme de rencontre n'a été ajoutée pour le moment",
+  "COC.notification.emptyInventory": "L'inventaire est vide",
+
   "COC.notification.MacroMultipleTokensSelected": "Vous avez sélectionné plusieurs tokens",
   "COC.notification.MacroNoActorAvailable": "Aucun acteur n'a pu être ciblé",
   "COC.notification.MacroNoTokenSelected": "Vous devez sélectionner un token",
@@ -401,11 +401,39 @@
   "COC.notification.NotEnoughFreeHands" : "Pas suffisament de mains libres pour équiper l'objet",
   "COC.notification.ArmorSlotNotAvailable" : "L'emplacement pour équiper cette armure n'est pas disponible",
   "COC.notification.ItemNotEquipable" : "{itemName} n'est pas un objet équipable",
+  "COC.notification.CapacityAlreadyOnItem" : "Cet objet contient déjà cette capacité.",
+  "COC.notification.HitPointsNoTarget" : "Vous devez sélectionner au moins une cible pour appliquer les dégâts",
+  "COC.notification.PathAlreadyOwned" : "Vous possédez déjà cette voie.",
+  "COC.notification.PathAlreadyOnItem" : "Cet objet contient déjà cette voie.",
+  "COC.notification.ConsumeEmptyObject" : "Vous ne pouvez plus utiliser cet objet !",
+  "COC.notification.ActivateEmptyCapacity" : "Vous ne pouvez plus utiliser cette capacité !",
+  "COC.notification.ProfileAlreadyOwned" : "Vous avez déjà un profil.",
+  "COC.notification.ItemNotFound" : "Impossible de trouver l'objet",
+  "COC.notification.incompetentWithWeapon": "{name} est incompétent pour utiliser l'arme {item}",
+  "COC.notification.incompetentWithArmor": "{name} est incompétent dans le port de l'armure {item}",
+  "COC.notification.chatHook.noSkillSelected": "Vous devez préciser la caractéristique à tester, par exemple /skill str.",
+  "COC.notification.ItemNotInInventory" : "L'objet '{itemName}' n'est pas dans l'inventaire de {actorName}",
 
+  "COC.dialog.deletePath.title": "Supprimer la voie ?",
+  "COC.dialog.deletePath.confirm": "<p>Etes-vous sûr de vouloir supprimer la voie de {name} ?</p>",
+  "COC.dialog.deletePath.confirmSeveralPaths" : "{nb} voies ont été supprimées.",
+  "COC.dialog.deletePath.confirmOnePath" : "1 voie a été supprimée.",   
+  "COC.dialog.deleteProfile.title": "Supprimer le profil ?",
+  "COC.dialog.deleteProfile.confirm" : "<p>Etes-vous sûr de vouloir supprimer le profil de {name} ?</p>",
+  "COC.dialog.deleteProfile.confirmDelete" : "Le profil a été supprimé.",  
+  "COC.dialog.deleteSpecie.title": "Supprimer la race ?",
+  "COC.dialog.deleteSpecie.confirm": "<p>Etes-vous sûr de vouloir supprimer la race de {name} ?</p>", 
+  "COC.dialog.deleteSpecie.confirmDelete" : "La race a été supprimée.",
+  "COC.dialog.deleteSpecie.confirmSeveralCapacities" : "{nb} capacitées ont été supprimées.",
+  "COC.dialog.deleteSpecie.confirmOneCapacity" : "1 capacitée a été supprimée.",    
   "COC.dialog.rollWeapon.title": "Jet d'attaque",
   "COC.dialog.rollDamage.title": "Jet de dommages",
   "COC.dialog.rollHitPoints.title": "Lancer les points de vie",
+  "COC.dialog.rollHitPoints.error": "Vous devez sélectionner un profil ou choisir un Dé de Vie",
   "COC.dialog.spendRecoveryPoint.title": "Dépenser un point de récupération",
+  "COC.dialog.spendRecoveryPoint.content": "<p>Êtes-vous sûr de vouloir dépenser 1 point de récupération ?",
+  "COC.dialog.spendRecoveryPoint.rollTitle": "Point de récupération",
+  "COC.dialog.chooseCharacteristics.title": "Scores de caractéristiques",
 
   "SETTINGS.useRecovery.name": "Points de Récupération",
   "SETTINGS.useRecovery.hint": "Utiliser la règle optionnelle des Points de Récupération (PR).",
